--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="color_depth">颜色深度</string>
     <string name="transparency">透明度</string>
     <string name="examples_text">示例文本</string>
+    <string name="insert_text">添加的文字:</string>
+    <string name="text_size">字体大小:</string>
 </resources>
